--- a/app/views/garages/_form.html.erb
+++ b/app/views/garages/_form.html.erb
@@ -4,7 +4,7 @@
         Add to house(s) you own
     -->
     <%= f.label :size, "Size: " %>
-    <%= f.text_field :size %><br>
+    <%= f.number_field :size %><br>
 
     <%= f.label :room_style_id, "Style: " %>
     <%= f.collection_select :room_style_id, RoomStyle.all, :id, :style %>
