--- a/app/views/room_styles/_form.html.erb
+++ b/app/views/room_styles/_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.text_field :style %><br>
 
     <%= f.label :cost, "Cost Multiplier: " %>
-    <%= f.text_field :cost %><br>
+    <%= f.number_field :cost %><br>
 
     <%= f.submit %>
 <% end %>
