Updated Kitchen and NavBar

--- a/app/views/kitchens/_form.html.erb
+++ b/app/views/kitchens/_form.html.erb
@@ -9,6 +9,8 @@
 <br>
 
 <%= form_for(@kitchen) do |f|%>
+    <%= f.hidden_field :user_id, value: current_user.id%>
+
     <%= f.label :'What is the Size of the Kitchen?'%>
     <%= f.number_field :size%> <br>
 
