--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Here is the new Kitchen</h1>
+<h1>Here is the new Kitchen, <%= @kitchen.user.show_name%> </h1>
 <h2>This Kitchen is of the <%=@kitchen.room_style.style%> style
 and is <%=@kitchen.size%> square feet. </h2>
 <h3>This Kitchen is part of <%=@kitchen.houses.count%> houses at the moment.</h3>
