--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
   <body>
     <%= link_to "Click Here to Log Out", logout_path%>
+    <%= link_to current_user.show_name, user_path(current_user)%>
     <%= yield %>
   </body>
 </html>
