--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -21,5 +21,6 @@
         </ul>
 </ul>
 <br><br>
-
-<%= link_to "Edit Bedroom No.#{@bedroom.id}", edit_bedroom_path(@bedroom) %>
+<% if @bedroom.user == @user %>
+    <%= link_to "Edit Bedroom No.#{@bedroom.id}", edit_bedroom_path(@bedroom) %>
+<% end %>
