--- a/app/views/garages/_form.html.erb
+++ b/app/views/garages/_form.html.erb
@@ -3,6 +3,8 @@
         create new style from here
         Add to house(s) you own
     -->
+    <%= f.hidden_field :user_id, value: current_user.id %>
+
     <%= f.label :size, "Size: " %>
     <%= f.number_field :size %><br>
 
