--- a/app/views/garages/index.html.erb
+++ b/app/views/garages/index.html.erb
@@ -1,5 +1,11 @@
 <h2>Garages</h2>
 
+<% if flash[:errors] %>
+  <% flash[:errors].each do |message| %>
+    <h4 style="color: red;"> Error: <%= message %> </h4>
+  <% end %>
+<% end %>
+
 <ul>
   <% @garages.each do |garage| %>
     <li>
