--- a/app/views/other_rooms/show.html.erb
+++ b/app/views/other_rooms/show.html.erb
@@ -21,5 +21,6 @@
         </ul>
 </ul>
 <br><br>
-
-<%= link_to "Edit Bedroom No.#{@other_room.id}", edit_other_room_path(@other_room) %>
+<% if @other_room.user == @user %>
+    <%= link_to "Edit Bedroom No.#{@other_room.id}", edit_other_room_path(@other_room) %>
+<% end %>
