--- a/app/views/room_styles/_form.html.erb
+++ b/app/views/room_styles/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @room_style do |f| %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
+
     <%= f.label :style, "Name: " %>
     <%= f.text_field :style %><br>
 
