--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,16 @@
 <% end %>
 </ul>
 
-<h1>This Is A Test</h1>
+<h1>This is <%=@other_user.show_name%>'s page</h1>
+<h2>These Are <%=@other_user.show_name%>'s Kitchens</h2>
+<ul>
+<% if @other_user.kitchens.count == 0%>
+    <li>This User Doesn't Have Any Kitchens</li>
+<% else %>
+    <% @other_user.kitchens.each do |kitchen|%>
+        <%= link_to "Click Here To View The Kitchen", kitchen_path(kitchen)%>
+    <% end %>
+    <br>
+<% end %>
+<br>
+</ul>
