Deactivation Added Successfully

--- a/app/views/users/private_page.html.erb
+++ b/app/views/users/private_page.html.erb
@@ -25,3 +25,6 @@
         <%= link_to "Create A New Kitchen", new_kitchen_path%>
     <% end %>
 </ul>
+<br>
+<br>
+<%= link_to "Click Here To Delete Your Account", user_path(current_user), method: :delete%>
