--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <%= link_to "Click Here to Log Out", logout_path%>
     <%= link_to current_user.show_name, user_path(current_user)%>
     <%= link_to "View All Houses", houses_path%>
-    
+    <%= link_to "View All Kitchens", kitchens_path%>
+
     <%= yield %>
   </body>
 </html>
