--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= link_to current_user.show_name, user_path(current_user)%>
     <%= link_to "View All Houses", houses_path%>
     <%= link_to "View All Kitchens", kitchens_path%>
+    <%= link_to "View All Bathrooms", bathrooms_path%>
 
     <%= yield %>
   </body>
