--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,3 +26,5 @@
     <br> 
     <%= f.submit "Sign Up", class: "btn btn-default"%>
 <%end%>
+
+<%= link_to "Return to the Main Page", logout_path%>
