Room Style desc

--- a/app/views/room_styles/_form.html.erb
+++ b/app/views/room_styles/_form.html.erb
@@ -4,6 +4,9 @@
     <%= f.label :style, "Name: " %>
     <%= f.text_field :style %><br>
 
+    <%= f.label :desc, "Descripton: " %>
+    <%= f.text_field :desc %><br>
+
     <%= f.label :cost, "Cost Multiplier: " %>
     <%= f.number_field :cost %><br>
 
