Finished House Index Page

--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,73 +1,4 @@
 <h1>Here Are All The Houses</h1>
 <%@houses.each do |house|%>
-<ul>
-    <li>There are <%=house.bathrooms.count%> Bathrooms in This House </li>
-    <ul>
-    <%total_bathroom_cost = 0%>
-    <%house.bathrooms.each do |bathroom|%>
-        <li> This Bathroom is of The <%=bathroom.room_style.style%> style </li>
-        <ul>
-        <li> This Bathroom Costs: <%= bathroom.bathroom_cost%> Dollars</li>
-        <% total_bathroom_cost += bathroom.bathroom_cost%>
-        <li> The size of this bathrooms is: <%=bathroom.size%> </li>
-        <% if bathroom.half?%>
-            <li> This is a Half Bath </li>
-        <% else%>
-            <li>This is a Full Bath </li>
-        <% end %>
-        </ul>
-    <% end %>
-    <li> Total Cost Of All Bathrooms In This House: <%= total_bathroom_cost%> Dollars</li>
-    <br>
-    </ul>
-
-    <li>There are <%=house.garages.count%> Garages At This House </li>
-    <ul>
-    <%house.garages.each do |garage|%>
-        <li> This Garage is of The <%=garage.room_style.style%> Style </li>
-        <ul>
-        <li> The size of this garage is: <%=garage.size%> </li>
-        </ul>
-    <% end %>
-    <br>
-    </ul>
-
-    <li>There are <%=house.bedrooms.count%> Bedrooms In This House</li>
-    <ul>
-    <%house.bedrooms.each do |bedroom|%>
-        <li>This Bedroom is of the <%=bedroom.room_style.style%> style</li>
-        <ul>
-        <li>This Bedroom is <%=bedroom.size%> </li>
-        </ul>
-        <% end %>
-        <br>
-    </ul>
-
-    <li>There are <%=house.kitchens.count%> Kitchens in this House</li>
-    <ul>
-    <%house.kitchens.each do |kitchen|%> 
-        <li>This Kitchen is of the <%=kitchen.room_style.style%> style</li>
-        <ul>
-        <li>This Kitchen is <%=kitchen.size%>
-        </li>
-        </ul>
-        <% end %>
-        <br>
-    </ul>
-
-    <li>There are <%=house.other_rooms.count%> Other rooms in this House</li>
-    <ul>
-    <%house.other_rooms.each do |room|%>
-        <li>This room is a <%=room.room_type%> and is of the <%=room.room_style.style%> style </li>
-        <ul>
-            <li>This room is <%=room.size%> </li>
-        </ul>
-        <% end %>
-        <br>
-    </ul>
-
-    ++++++++++++++++++++++++++++++++++++++
-    <br>
-    <br>
-    </ul>
+    <%= link_to "View This House", house_path(house)%> <br> <br>
 <% end %>
