--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -1,6 +1,17 @@
-<h1>Here is the new Bathroom</h1>
+<h1>Here is the Bathroom, <%= current_user.show_name %> </h1>
+
+<ul>
+<% flash.each do |type, msg| %>
+    <li><%= msg %></li>
+<% end %>
+</ul>
+
 <h2>This bathroom is of the <%=@bathroom.room_style.style%> style
-and is <%=@bathroom.size%> square feet. <%=@half%> </h2>
+and is <%=@bathroom.size%> square feet. <%=@half%>. 
+This Bathroom Costs: $<%= @bathroom.bathroom_cost %></h2>
+
+<h2>The Creator of This Design is: <%=link_to @bathroom.user.show_name, user_path(@bathroom.user)%> </h2>
+
 <h3>This Bathroom is part of <%=@bathroom.houses.count%> houses at the moment.</h3>
 <% @bathroom.houses.each do |house|%>
     <%= link_to "View This House", house_path(house)%> <br>
@@ -8,6 +19,8 @@ and is <%=@bathroom.size%> square feet. <%=@half%> </h2>
 <br>
 
 <%= link_to "Make a new bathroom", new_bathroom_path%> <br>
-<%= link_to "Edit This Bathroom", edit_bathroom_path(@bathroom)%> <br>
-<%= link_to "Delete This Bathroom", bathroom_path(@bathroom), method: :delete%> <br>
+<% if @current_user_boolean%>
+    <%= link_to "Edit This Bathroom", edit_bathroom_path(@bathroom)%> <br>
+    <%= link_to "Delete This Bathroom", bathroom_path(@bathroom), method: :delete%> <br>
+<% end %>
 <%= link_to "View All Bathrooms", bathrooms_path%>
