--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,3 +23,16 @@
 <% end %>
 <br>
 </ul>
+
+<h2>These Are <%=@other_user.show_name%>'s Bathrooms</h2>
+<ul>
+<% if @other_user.bathrooms.count == 0 %> 
+    <li>This User Doesn't Have Any Bathrooms</li> <br>
+<% else %>
+    <% @other_user.bathrooms.each do |bathroom|%>
+        <%= link_to "Click Here To View The Bathroom", bathroom_path(bathroom)%> <br>
+    <% end %>
+    <br>
+<% end %>
+<br>
+</ul>
