--- a/app/views/static/analytics.html.erb
+++ b/app/views/static/analytics.html.erb
@@ -1,12 +1,14 @@
 <h2> Welcome to the Analytics Page </h2>
 <br>
-<h3> Please select the type of information you are looking for <h3>
+<h3> Please select the type of information you are looking for </h3>
 
-<ul>
-    <li><%= link_to 'House Analytics', analytics_houses_path %> </li>
-    <li><%= link_to 'Garage Analytics', analytics_garages_path %> </li>
-    <li><%= link_to 'Bedroom Analytics', analytics_bedrooms_path %> </li>
-    <li><%= link_to 'Kitchen Analytics', analytics_kitchens_path %> </li>
-    <li><%= link_to 'Bathroom Analytics', analytics_bathrooms_path %> </li>
-    <li><%= link_to 'Other Room Analytics', analytics_other_rooms_path %> </li>
-</ul>
+<h3>
+    <ul>
+        <li><%= link_to 'House Analytics', analytics_houses_path %> </li>
+        <li><%= link_to 'Garage Analytics', analytics_garages_path %> </li>
+        <li><%= link_to 'Bedroom Analytics', analytics_bedrooms_path %> </li>
+        <li><%= link_to 'Kitchen Analytics', analytics_kitchens_path %> </li>
+        <li><%= link_to 'Bathroom Analytics', analytics_bathrooms_path %> </li>
+        <li><%= link_to 'Other Room Analytics', analytics_other_rooms_path %> </li>
+    </ul>
+</h3>
