--- a/app/views/bathrooms/show.html.erb
+++ b/app/views/bathrooms/show.html.erb
@@ -8,7 +8,7 @@
 
 <h2>This bathroom is of the <%=@bathroom.room_style.style%> style
 and is <%=@bathroom.size%> square feet. <%=@half%>. 
-This Bathroom Costs: $<%= @bathroom.bathroom_cost %></h2>
+This Bathroom Costs: $<%= @bathroom.cost %></h2>
 
 <h2>The Creator of This Design is: <%=link_to @bathroom.user.show_name, user_path(@bathroom.user)%> </h2>
 
