updated all pages

--- a/app/views/bathrooms/_form.html.erb
+++ b/app/views/bathrooms/_form.html.erb
@@ -19,4 +19,10 @@
 
     <%= f.submit %>
 <% end %>
+<br>
+<% if @bathroom.persisted? %>
+    <%= link_to  "Back", bathroom_path(@bathroom) %>
+<% else %>
+    <%= link_to  "Back", bathrooms_path %>
+<% end %>
 
