--- a/app/views/bedrooms/index.html.erb
+++ b/app/views/bedrooms/index.html.erb
@@ -10,6 +10,8 @@
             <br>
             Room Style: 
             <%= link_to " #{bedroom.room_style.style}", room_style_path(bedroom.room_style) %>
+            Room Cost:
+            <%= " #{bedroom.cost}" %>
         </ul>
     </li>
     <br>
