--- a/app/views/bedrooms/show.html.erb
+++ b/app/views/bedrooms/show.html.erb
@@ -11,6 +11,7 @@
     Style:
     <%= link_to  " #{@bedroom.room_style.style}", room_style_path(@bedroom.room_style) %>
     <br>
+    Cost: <%= " #{@bedroom.cost}"%>
     <%= "Houses using bedroom no. #{@bedroom.id}:" %>
         <ul>
             <% @bedroom.houses.each do |house| %>
