--- a/app/views/garages/index.html.erb
+++ b/app/views/garages/index.html.erb
@@ -16,6 +16,8 @@
             <br>
             Room Style: 
             <%= link_to " #{garage.room_style.style}", room_style_path(garage.room_style) %>
+            Room Cost:
+            <%= " #{garage.cost}" %>
         </ul>
     </li>
     <br>
