--- a/app/views/kitchens/_form.html.erb
+++ b/app/views/kitchens/_form.html.erb
@@ -18,3 +18,9 @@
 
     <%= f.submit %>
 <% end %>
+<br>
+<% if @kitchen.persisted? %>
+    <%= link_to  "Back", kitchen_path(@kitchen) %>
+<% else %>
+    <%= link_to  "Back", kitchens_path %>
+<% end %>
