--- a/app/views/other_rooms/index.html.erb
+++ b/app/views/other_rooms/index.html.erb
@@ -13,6 +13,8 @@
             <br>
             Room Style: 
             <%= link_to " #{other_room.room_style.style}", room_style_path(other_room.room_style) %>
+            Room Cost:
+            <%= " #{other_room.cost}"%>
         </ul>
     </li>
     <br>
