--- a/app/views/other_rooms/show.html.erb
+++ b/app/views/other_rooms/show.html.erb
@@ -19,8 +19,9 @@
                 </li>
             <% end %>
         </ul>
+    Cost: <%= " #{@other_room.cost}" %>
 </ul>
 <br><br>
 <% if @other_room.user == current_user %>
-    <%= link_to "Edit Bedroom No.#{@other_room.id}", edit_other_room_path(@other_room) %>
+    <%= link_to "Edit #{@other_room.room_type}", edit_other_room_path(@other_room) %>
 <% end %>
