--- a/app/views/bedrooms/_form.html.erb
+++ b/app/views/bedrooms/_form.html.erb
@@ -1,8 +1,10 @@
+<% if flash[:errors] %>
+    <% flash[:errors].each do |message| %>
+        <h4 style="color: red;"> Error: <%= message %> </h4>
+    <% end %>
+<% end %>
 <%= form_for @bedroom do |f| %>
-    <!-- TODO 
-        create new style from here
-        Add to house(s) you own
-    -->
+
     <%= f.hidden_field :user_id, value: current_user.id %>
 
     <%= f.label :size, "Size: " %>
@@ -17,4 +19,10 @@
     <br>
     <br>
     <%= f.submit %>
+<% end %>
+<br>
+<% if @bedroom.persisted? %>
+    <%= link_to  "Back", bedroom_path(@bedroom) %>
+<% else %>
+    <%= link_to  "Back", bedrooms_path %>
 <% end %>
