--- a/app/views/garages/_form.html.erb
+++ b/app/views/garages/_form.html.erb
@@ -1,8 +1,11 @@
+<% if flash[:errors] %>
+    <% flash[:errors].each do |message| %>
+        <h4 style="color: red;"> Error: <%= message %> </h4>
+    <% end %>
+<% end %>
+
 <%= form_for @garage do |f| %>
-    <!-- TODO 
-        create new style from here
-        Add to house(s) you own
-    -->
+    
     <%= f.hidden_field :user_id, value: current_user.id %>
 
     <%= f.label :size, "Size: " %>
@@ -16,4 +19,10 @@
     <br>
 
     <%= f.submit %>
+<% end %>
+<br>
+<% if @garage.persisted? %>
+    <%= link_to  "Back", garage_path(@garage) %>
+<% else %>
+    <%= link_to  "Back", garages_path %>
 <% end %>
