--- a/app/views/other_rooms/new.html.erb
+++ b/app/views/other_rooms/new.html.erb
@@ -1,9 +1,4 @@
-<h2> <%= "Create a new oom" %> </h2>
+<h2> <%= "Create a new room" %> </h2>
 
-<% if flash[:errors] %>
-  <% flash[:errors].each do |message| %>
-    <h4 style="color: red;"> Error: <%= message %> </h4>
-  <% end %>
-<% end %>
 
 <%= render "form"%>
