--- a/app/views/room_styles/_form.html.erb
+++ b/app/views/room_styles/_form.html.erb
@@ -1,3 +1,10 @@
+
+<% if flash[:errors] %>
+  <% flash[:errors].each do |message| %>
+    <h4 style="color: red;"> Error: <%= message %> </h4>
+  <% end %>
+<% end %>
+
 <%= form_for @room_style do |f| %>
     <%= f.hidden_field :user_id, value: current_user.id %>
 
@@ -11,4 +18,10 @@
     <%= f.number_field :cost %><br>
 
     <%= f.submit %>
+<% end %>
+<br>
+<% if @room_style.persisted? %>
+    <%= link_to  "Back", room_style_path(@room_style) %>
+<% else %>
+    <%= link_to  "Back", room_styles_path %>
 <% end %>
