--- a/app/views/users/private_page.html.erb
+++ b/app/views/users/private_page.html.erb
@@ -6,7 +6,7 @@
         <li>You Dont Have Any Houses. <%= link_to "Click Here To Make A New One", new_house_path %> </li>
     <% else %>
         <% current_user.houses.each do |house|%>
-            <li> <%= link_to "View This House", house_path(house)%> </li>
+            <li> <%= link_to "View House no. #{house.id}", house_path(house)%> </li>
         <% end %>
         <br>
         <%= link_to "Create A New House", new_house_path%>
@@ -19,12 +19,78 @@
         <li>You Dont Have Any Kitchens. <%= link_to "Click Here To Make A New One", new_kitchen_path %> </li>
     <% else %>
         <% current_user.kitchens.each do |kitchen|%>
-            <li> <%= link_to "View This Kitchen", kitchen_path(kitchen) %> </li>
+            <li> <%= link_to "View Kitchen no. #{kitchen.id}", kitchen_path(kitchen) %> </li>
         <% end %>
         <br>
         <%= link_to "Create A New Kitchen", new_kitchen_path%>
     <% end %>
 </ul>
+
+<h2>Here Are All Of Your Bathrooms:</h2>
+<ul>
+    <% if current_user.bathrooms.count == 0%>
+        <li>You Dont Have Any Bathrooms. <%= link_to "Click Here To Make A New One", new_bathroom_path %> </li>
+    <% else %>
+        <% current_user.bathrooms.each do |bathroom|%>
+            <li> <%= link_to "View Bathroom no. #{bathroom.id}", bathroom_path(bathroom) %> </li>
+        <% end %>
+        <br>
+        <%= link_to "Create A New Bathroom", new_bathroom_path%>
+    <% end %>
+</ul>
+
+<h2>Here Are All Of Your Bedrooms:</h2>
+<ul>
+    <% if current_user.bedrooms.count == 0%>
+        <li>You Dont Have Any Bedrooms. <%= link_to "Click Here To Make A New One", new_bedroom_path %> </li>
+    <% else %>
+        <% current_user.bedrooms.each do |bedroom|%>
+            <li> <%= link_to "View Bedroom no. #{bedroom.id}", bedroom_path(bedroom) %> </li>
+        <% end %>
+        <br>
+        <%= link_to "Create A New Bedroom", new_bedroom_path%>
+    <% end %>
+</ul>
+
+<h2>Here Are All Of Your Garages:</h2>
+<ul>
+    <% if current_user.garages.count == 0%>
+        <li>You Dont Have Any Garages. <%= link_to "Click Here To Make A New One", new_garage_path %> </li>
+    <% else %>
+        <% current_user.garages.each do |garage|%>
+            <li> <%= link_to "View Garage no. #{garage.id}", garage_path(garage) %> </li>
+        <% end %>
+        <br>
+        <%= link_to "Create A New Garage", new_garage_path%>
+    <% end %>
+</ul>
+
+<h2>Here Are All Of Your Other Rooms:</h2>
+<ul>
+    <% if current_user.other_rooms.count == 0%>
+        <li>You Dont Have Any Other Rooms. <%= link_to "Click Here To Make A New One", new_other_room_path %> </li>
+    <% else %>
+        <% current_user.other_rooms.each do |other_room|%>
+            <li> <%= link_to "View #{other_room.room_type}", other_room_path(other_room) %> </li>
+        <% end %>
+        <br>
+        <%= link_to "Create A New Room", new_other_room_path%>
+    <% end %>
+</ul>
+
+<h2>Here Are All Of Your Room Styles:</h2>
+<ul>
+    <% if current_user.room_styles.count == 0%>
+        <li>You Dont Have Any Room Styles. <%= link_to "Click Here To Make A New One", new_room_style_path %> </li>
+    <% else %>
+        <% current_user.room_styles.each do |room_style|%>
+            <li> <%= link_to "View Room Style no. #{room_style.id}", room_style_path(room_style) %> </li>
+        <% end %>
+        <br>
+        <%= link_to "Create A New Room Style", new_room_style_path%>
+    <% end %>
+</ul>
+
 <br>
 <br>
 <%= link_to "Click Here To Delete Your Account", user_path(current_user), method: :delete%>
