--- a/app/views/garages/show.html.erb
+++ b/app/views/garages/show.html.erb
@@ -21,6 +21,8 @@
             <% end %>
         </ul>
     Cost: <%= " #{@garage.cost}" %>
+    <br>
+    Room Designer: <%= link_to " #{@garage.user.name}", user_path(@garage.user) %>
 </ul>
 <br><br>
 
