--- a/app/views/kitchens/_form.html.erb
+++ b/app/views/kitchens/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.number_field :size%> <br>
 
     <%= f.collection_select :room_style_id, RoomStyle.all, :id, :style%> <br>
+    
+    <%= f.collection_check_boxes :house_ids, current_user.houses, :id, :house_name%>
+    <br>
+    <br>
 
     <%= f.submit %>
 <% end %>
