Added Users to hot bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
     <%= link_to current_user.show_name, user_path(current_user)%>
     </span>
     <span style="margin-left: 1em;">
+    <%= link_to "Users", users_path%>
+    </span>
+    <span style="margin-left: 1em;">
       <%= link_to "Houses", houses_path%>
     </span>
     <span style="margin-left: 1em;">
