Analytics on hotbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
     <span style="margin-left: 1em;">
       <%= link_to "Room Styles", room_styles_path%>
     </span>
+    <span style="margin-left: 1em;">
+      <%= link_to "Analytics", analytics_path%>
+    </span>
 
     <%= yield %>
   </body>
